--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "bundle/vimproj"]
 	path = bundle/vimproj
-	url = git@github.com:okcompute/vimproj.git
+	url = https://github.com/okcompute/vimproj.git
 [submodule "bundle/Gundo"]
 	path = bundle/Gundo
-	url = git://github.com/vim-scripts/Gundo.git
+	url = https://github.com/sjl/gundo.vim.git
 [submodule "bundle/snipmate"]
 	path = bundle/snipmate
 	url = https://github.com/msanders/snipmate.vim.git
 [submodule "bundle/vim-powerline"]
 	path = bundle/vim-powerline
-	url = git://github.com/Lokaltog/vim-powerline.git
+	url = https://github.com/Lokaltog/vim-powerline.git
 [submodule "bundle/supertab"]
 	path = bundle/supertab
 	url = https://github.com/ervandew/supertab.git
