Added FuzzyFinder submodule hoping git submodule will be fixed.

--- a/.gitmodules
+++ b/.gitmodules
@@ -69,3 +69,7 @@
 	path = bundle/tagbar
 	url = https://github.com/majutsushi/tagbar.git
     ignore = untracked
+[submodule "bundle/FuzzyFinder"]
+	path = bundle/FuzzyFinder
+	url = https://github.com/vim-scripts/FuzzyFinder.git
+    ignore = untracked
