--- a/.gitmodules
+++ b/.gitmodules
@@ -5,10 +5,6 @@
 	path = bundle/Gundo
 	url = https://github.com/sjl/gundo.vim.git
     ignore = untracked
-[submodule "bundle/snipmate"]
-	path = bundle/snipmate
-	url = https://github.com/msanders/snipmate.vim.git
-    ignore = untracked
 [submodule "bundle/vim-powerline"]
 	path = bundle/vim-powerline
 	url = https://github.com/Lokaltog/vim-powerline.git
@@ -73,3 +69,6 @@
 	path = bundle/FuzzyFinder
 	url = https://github.com/vim-scripts/FuzzyFinder.git
     ignore = untracked
+[submodule "bundle/ultisnips"]
+	path = bundle/ultisnips
+	url = https://github.com/SirVer/ultisnips.git
