--- a/.gitmodules
+++ b/.gitmodules
@@ -72,3 +72,6 @@
 [submodule "bundle/ultisnips"]
 	path = bundle/ultisnips
 	url = https://github.com/SirVer/ultisnips.git
+[submodule "bundle/python_match"]
+	path = bundle/python_match
+	url = https://github.com/vim-scripts/python_match.vim.git
