--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 	path = bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
     ignore = untracked
+[submodule "bundle/python-mode"]
+	path = bundle/python-mode
+	url = https://github.com/klen/python-mode.git
