--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@
 [submodule "bundle/vim-ctags"]
 	path = bundle/vim-ctags
 	url = https://github.com/okcompute/vim-ctags.git
+[submodule "bundle/pytest.vim"]
+	path = bundle/pytest.vim
+	url = https://github.com/alfredodeza/pytest.vim.git
