--- a/.gitmodules
+++ b/.gitmodules
@@ -2,10 +2,6 @@
 	path = bundle/Gundo
 	url = https://github.com/sjl/gundo.vim.git
     ignore = untracked
-[submodule "bundle/vim-powerline"]
-	path = bundle/vim-powerline
-	url = https://github.com/Lokaltog/vim-powerline.git
-    ignore = untracked
 [submodule "bundle/supertab"]
 	path = bundle/supertab
 	url = https://github.com/ervandew/supertab.git
@@ -68,9 +64,16 @@
 [submodule "bundle/pytest.vim"]
 	path = bundle/pytest.vim
 	url = https://github.com/alfredodeza/pytest.vim.git
+    ignore = untracked
 [submodule "bundle/dash"]
 	path = bundle/dash
 	url = https://github.com/rizzatti/dash.vim.git
+    ignore = untracked
 [submodule "bundle/calendar-vim"]
 	path = bundle/calendar-vim
 	url = https://github.com/mattn/calendar-vim.git
+    ignore = untracked
+[submodule "bundle/powerline"]
+	path = bundle/powerline
+	url = https://github.com/Lokaltog/powerline.git
+    ignore = untracked
