Add dash.vim dependency. Add 'Google' comand to search word under cursor. Add .git and virtualenv folder in wildignore list.

--- a/.gitmodules
+++ b/.gitmodules
@@ -77,3 +77,6 @@
 	path = bundle/powerline
 	url = https://github.com/Lokaltog/powerline.git
     ignore = untracked
+[submodule "bundle/funcoo"]
+	path = bundle/funcoo
+	url = https://github.com/rizzatti/funcoo.vim.git
