--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,6 @@
 	path = bundle/powerline
 	url = https://github.com/Lokaltog/powerline.git
     ignore = untracked
+[submodule "bundle/YouCompleteMe"]
+	path = bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
