--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "bundle/vim-lint"]
 	path = bundle/vim-lint
 	url = https://github.com/dbakker/vim-lint.git
+[submodule "bundle/python-syntax"]
+	path = bundle/python-syntax
+	url = https://github.com/hdima/python-syntax.git
