--- a/.gitmodules
+++ b/.gitmodules
@@ -47,7 +47,7 @@
 	url = https://github.com/Valloric/YouCompleteMe.git
 [submodule "bundle/python-mode"]
 	path = bundle/python-mode
-	url = https://github.com/klen/python-mode.git
+	url = https://github.com/okcompute/python-mode.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
