--- a/.gitmodules
+++ b/.gitmodules
@@ -81,3 +81,15 @@
 [submodule "bundle/vim-simple-session"]
 	path = bundle/vim-simple-session
 	url = https://github.com/manuel-colmenero/vim-simple-session.git
+[submodule "bundle/neco-ghc"]
+	path = bundle/neco-ghc
+	url = https://github.com/eagletmt/neco-ghc.git
+[submodule "bundle/ghcmod-vim"]
+	path = bundle/ghcmod-vim
+	url = https://github.com/eagletmt/ghcmod-vim.git
+[submodule "bundle/vimproc"]
+	path = bundle/vimproc
+	url = https://github.com/Shougo/vimproc.vim.git
+[submodule "bundle/vim2hs"]
+	path = bundle/vim2hs
+	url = https://github.com/dag/vim2hs.git
