Switch from Pathogen to Vundle for plugin management

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,95 +1,3 @@
-[submodule "bundle/Gundo"]
-	path = bundle/Gundo
-	url = https://github.com/sjl/gundo.vim.git
-    ignore = untracked
-[submodule "bundle/AutoTag"]
-	path = bundle/AutoTag
-	url = https://github.com/vim-scripts/AutoTag.git
-    ignore = untracked
-[submodule "bundle/vim-fswitch"]
-	path = bundle/vim-fswitch
-	url = https://github.com/derekwyatt/vim-fswitch.git
-    ignore = untracked
-[submodule "bundle/vim-indent-object"]
-	path = bundle/vim-indent-object
-	url = https://github.com/michaeljsmith/vim-indent-object.git
-    ignore = untracked
-[submodule "bundle/cocoa.vim"]
-	path = bundle/cocoa.vim
-	url = https://github.com/msanders/cocoa.vim.git
-    ignore = untracked
-[submodule "bundle/vim-commentary"]
-	path = bundle/vim-commentary
-	url = https://github.com/tpope/vim-commentary.git
-    ignore = untracked
-[submodule "bundle/vim-repeat"]
-	path = bundle/vim-repeat
-	url = https://github.com/tpope/vim-repeat.git
-    ignore = untracked
-[submodule "bundle/bufkill"]
-	path = bundle/bufkill
-	url = https://github.com/vim-scripts/bufkill.vim.git
-    ignore = untracked
-[submodule "bundle/ultisnips"]
-	path = bundle/ultisnips
-	url = https://github.com/SirVer/ultisnips.git
-    ignore = untracked
-[submodule "bundle/python_match"]
-	path = bundle/python_match
-	url = https://github.com/vim-scripts/python_match.vim.git
-    ignore = untracked
-[submodule "bundle/ctrlp"]
-	path = bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
-    ignore = untracked
-[submodule "bundle/YouCompleteMe"]
-	path = bundle/YouCompleteMe
-	url = https://github.com/Valloric/YouCompleteMe.git
-[submodule "bundle/python-mode"]
-	path = bundle/python-mode
-	url = https://github.com/okcompute/python-mode.git
-[submodule "bundle/vim-fugitive"]
-	path = bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule "bundle/syntastic"]
-	path = bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
-[submodule "bundle/python-syntax"]
-	path = bundle/python-syntax
-	url = https://github.com/hdima/python-syntax.git
-[submodule "bundle/vim-surround"]
-	path = bundle/vim-surround
-	url = https://github.com/tpope/vim-surround.git
-[submodule "bundle/vim-unimpaired"]
-	path = bundle/vim-unimpaired
-	url = https://github.com/tpope/vim-unimpaired.git
-[submodule "bundle/vim-vinegar"]
-	path = bundle/vim-vinegar
-	url = https://github.com/tpope/vim-vinegar.git
-[submodule "bundle/vim-better-whitespace"]
-	path = bundle/vim-better-whitespace
-	url = https://github.com/ntpeters/vim-better-whitespace.git
-[submodule "bundle/vim-notes"]
-	path = bundle/vim-notes
-	url = https://github.com/xolox/vim-notes.git
-[submodule "bundle/vim-misc"]
-	path = bundle/vim-misc
-	url = https://github.com/xolox/vim-misc.git
-[submodule "bundle/vim-snippets"]
-	path = bundle/vim-snippets
-	url = https://github.com/honza/vim-snippets.git
-[submodule "bundle/vim-simple-session"]
-	path = bundle/vim-simple-session
-	url = https://github.com/manuel-colmenero/vim-simple-session.git
-[submodule "bundle/neco-ghc"]
-	path = bundle/neco-ghc
-	url = https://github.com/eagletmt/neco-ghc.git
-[submodule "bundle/ghcmod-vim"]
-	path = bundle/ghcmod-vim
-	url = https://github.com/eagletmt/ghcmod-vim.git
-[submodule "bundle/vimproc"]
-	path = bundle/vimproc
-	url = https://github.com/Shougo/vimproc.vim.git
-[submodule "bundle/vim2hs"]
-	path = bundle/vim2hs
-	url = https://github.com/dag/vim2hs.git
+[submodule "vundle.vim"]
+	path = vundle.vim
+	url = https://github.com/gmarik/Vundle.vim.git
